@@ -18,6 +18,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8471: In doctest, properly reset the output stream to an empty
+  string when Unicode was previously output.
+
 - Issue #8620: when a Cmd is fed input that reaches EOF without a final
   newline, it no longer truncates the last character of the last command line.
 
